# tech.kevinhyde.com

./: .gitignore  CLAUDE.md  CNAME  README.md  apps-manifest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-outline.md  turbo.json
.claude/: launch.json
.github/workflows/: deploy.yml
apps/_template-react/: README.md  package.json  vite.config.js
apps/_template-static/: README.md  index.html  script.js  styles.css
apps/ai-cost-tracker/: README.md  index.html  package.json
apps/baseball-effects-workbench/: package-lock.json  package.json
apps/bat-swing/: README.md  index.html  package.json
apps/chef-jenny/: README.md  index.html
apps/chompie-advent/: README.md  data.js  index.html  manifest.json  script.js  styles.css
apps/citizenship-hub/: .firebaserc  .gitignore  CLAUDE-CODE-PROMPT.md  README.md  firestore.rules  index.html  package.json  seed-data.json
apps/cronometer-clone/: PRODUCT_PLAN.md  README.md  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/daily-baseline/: README.md  index.html  manifest.json  sw.js
apps/dice-baseball/: .deploy.env  CLAUDE.md  CLI-DEPLOYMENT.md  DEPLOYMENT.md  Makefile  README.md  SPEC-V2.md  backend-api-requirements.md  docker-compose.yml  index.html  manifest.json  manifest.webmanifest  package-lock.json  package.json  registerSW.js  sw.js  sw.js.map  workbox-12dc1003.js.map
apps/dice-roller/: README.md  index.html  manifest.json  script.js  styles.css  sw.js
apps/dismal-nitch/: README.md  index.html  script.js  styles.css
apps/game-gear-browser/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
apps/life-os-agent/: .env.example  .gitignore  README.md  SKILL.md  index.html  pyproject.toml  styles.css
apps/life-os-agent/config/: life-os-config.yaml
apps/life-os-agent/src/lifeos/: __init__.py  agent.py  api.py  calendar.py  cli.py  config.py  mcp_server.py  memory.py  prompts.py  scheduler.py  telegram_bot.py
apps/life-os-agent/tests/: test_config.py
apps/print-cost-tracker/: README.md  app.js  data.js  index.html  manifest.json  style.css
apps/pub-trivia/: README.md  index.html  manifest.json  script.js  styles.css  trivia-questions.json
apps/reading-pacer/: README.md  app.js  index.html  manifest.json  style.css  sw.js
apps/slot-01/: index.html
apps/slot-02/: index.html
apps/spinner/: sw.js  (+5 more)
cc-relay/: PROMPT.md  README.md  install.sh  uninstall.sh
life-os-agent/: .env.example  .gitignore  README.md  SPEC-V2.md  docker-compose.yml  pyproject.toml
life-os-agent/config/: life-os-config.yaml
life-os-agent/src/lifeos/: __init__.py  agent.py  calendar.py  cli.py  config.py  memory.py  scheduler.py
life-os-agent/tests/: __init__.py  test_config.py  test_scheduler.py
site/: astro.config.mjs  package.json
(+255 files in other folders)
